--- a/tex/References.bib
+++ b/tex/References.bib
@@ -187,3 +187,49 @@
   year={2009},
   publisher={" O'Reilly Media, Inc."}
 }
+
+% PACOTE URCA CRAN
+@Book{urcacran,
+  title = {Analysis of Integrated and Cointegrated Time  Series with R},
+  author = {B. Pfaff},
+  publisher = {Springer},
+  edition = {Second},
+  address = {New York},
+  year = {2008},
+  note = {ISBN 0-387-27960-1},
+  url = {http://www.pfaffikus.de},
+}
+
+% R CRAN
+@Manual{rcran,
+     title = {R: A Language and Environment for Statistical Computing},
+     author = {{R Core Team}},
+     organization = {R Foundation for Statistical Computing},
+     address = {Vienna, Austria},
+     year = {2021},
+     url = {https://www.R-project.org/},
+   }
+   
+% adf test
+@article{cheung1995lag,
+  title={Lag order and critical values of the augmented Dickey--Fuller test},
+  author={Cheung, Yin-Wong and Lai, Kon S},
+  journal={Journal of Business \& Economic Statistics},
+  volume={13},
+  number={3},
+  pages={277--280},
+  year={1995},
+  publisher={Taylor \& Francis Group}
+}
+
+% pp test
+@article{phillips1988testing,
+  title={Testing for a unit root in time series regression},
+  author={Phillips, Peter CB and Perron, Pierre},
+  journal={Biometrika},
+  volume={75},
+  number={2},
+  pages={335--346},
+  year={1988},
+  publisher={Oxford University Press}
+}
