--- a/tex/Text/chapter4.tex
+++ b/tex/Text/chapter4.tex
@@ -59,12 +59,69 @@ The time horizon adopted was from January 2005 to December 2020 -- it was not po
 
 In addition, it is noteworthy that, for convenience in relation to the estimations and the number of observations, it was chosen to use series of monthly frequency.\\
 
+Also regarding the behavior of the series, two unit root tests were performed to verify the stationarity condition: the Augmented-Dickey-Fuller \cite[]{cheung1995lag} and the Phillips \& Perron Unit Root Test \cite[]{phillips1988testing} -- both were estimated from the URCA package \cite[]{urcacran} from the R software \cite[]{rcran}. Since in one of the case studies the stationarity condition is necessary for the exercise to be carried out, the series that are not zero-order I(0) integrated must be treated.\\
+
+Basically, the Augmented-Dickey-Fuller and Phillips \& Perron tests consist of verifying whether the time series have a unit root. In the case of the Augmented-Dickey-Fuller test, given the equation:
+\begin{align}
+    \Delta y_t = \alpha + \beta t + \gamma y_{t-1} + \sum_{i=1}^{p} \delta_i \Delta y_{t-i} + \epsilon_t
+\end{align}
+where $\alpha$ is the model constant, $\beta$ the coefficient related to the trend, $p$ is the order of the autoregressive process and $\Delta$ represents the difference in the series. If both $\alpha$ and $\beta$ are not significant for the model, that is $\alpha = 0$ and $\beta = 0$, the variation of $y$ in $t$ will be explained only by $\ epsilon$, that is, by a white noise.\\
+
+The Phillips \& Perron unit root test, in turn, considers a model with an autoregressive process of order 1, so that:
+\begin{align}
+    y_t = \alpha + \beta t + \phi y_{t-1} + \epsilon_t
+\end{align}
+where $\alpha$ is the model constant, $\beta$ the coefficient related to the trend, $\phi$ is the coefficient related to a first order autoregressive process and $\epsilon$ is a white noise. Again, if $\alpha=0$ and $\beta = 0$ we are dealing with a situation where the series $y_t$ is explained only by a white noise, thus characterizing a random walk -- that is: the series is non-stationary. \\
+
+Both tests were performed for all series, with the exception of the indices of sentiments in difference, since both indices were stationary at level, these were only tested for level. 
+
+
+\begin{table}[!h]
+\label{tab:urlevel}
+\caption{Unit Root Tests: Augmented-Dickey-Fuller and Phillips \& Perron}
+\begin{adjustbox}{max width=\textwidth}
+\begin{tabular}{lllllllllll}
+\hline
+                               & \multicolumn{6}{c|}{Augmented-Dickey-Fuller}                                        & \multicolumn{4}{c}{Phillips \& Perron}                    \\ \cline{2-11} 
+                               & \multicolumn{2}{c|}{None} & \multicolumn{2}{c|}{Drift} & \multicolumn{2}{c|}{Trend} & \multicolumn{2}{c|}{Constant} & \multicolumn{2}{c}{Trend} \\ \hline
+Consumer Opinion Surveys       & -0.69189        &         & -2.46604        &          & -2.57411        &          & -2.51257          &           & -2.59686        &         \\
+Unemployment Rate              & -1.12625        &         & -0.16789        &          & -1.60657        &          & -0.12221          &           & -1.71892        &         \\
+Interest Rate                  & -1.90764        & *       & -0.99368        &          & -2.52323        &          & -0.95965          &           & -2.54834        &         \\
+Consumer Price Index           & -0.9864         &         & -1.16925        &          & -1.96056        &          & -1.23476          &           & -1.958          &         \\
+Gap Gross Domestic Product     & 0.576651        &         & -2.03914        &          & -4.33739        & *        & -1.6031           &           & -2.97149        & *        \\
+Producer Prices Index          & 0.726163        &         & -3.11724        & *        & -2.92142        &          & -2.99263          & *         & -2.64357        &         \\
+Negative Sentiment (VADER)     & -1.15748        &         & -7.23406        & *        & -8.13027        & *        & -9.89749          & *         & -10.5938        & *       \\
+Negative Sentiment LM-SA-2020) & -0.57929        &         & -7.39231        & *        & -7.36532        & *        & -9.93006          & *         & -9.89294        & *       \\ \hline
+\end{tabular}
+\end{adjustbox}
+\caption*{Note: * symbolizes that the series do not reject the null hypotheses of the tests, in the absence of a unit root. The test statistics, for the Augmented-Dickey-Fuller test for none, drift and trend are respectively for 10\%, 5\% and 1\%:-2.58, -1.95, -1.62; -3.46, -2.88, -2.57; -3.99, -3.43 and -3.13. For Phillips \& Perron test for constant and trend are respectively for 10\%, 5\% and 1\%: -3.48, -2.88, -2.58; -4.03, -3.44 and -3.15.}
+
+\end{table}
+
+
+% --------------------------------------------------
+
+\begin{table}[!h]
+\caption{Unit Root Tests for the Series in Difference: Augmented-Dickey-Fuller and Phillips \& Perron}
+\begin{adjustbox}{max width=\textwidth}
+\begin{tabular}{lllllllllll}
+\hline
+                           & \multicolumn{6}{c|}{Augmented-Dickey-Fuller}                                        & \multicolumn{4}{c}{Phillips \& Perron}                    \\
+                           & \multicolumn{2}{c|}{None} & \multicolumn{2}{c|}{Drift} & \multicolumn{2}{c|}{Trend} & \multicolumn{2}{c|}{constant} & \multicolumn{2}{c}{trend} \\ \hline
+Consumer Opinion Surveys   & -7.38867        & *       & -7.36197        & *        & -7.37293        & *        & -9.22024          & *         & -9.2483         & *       \\
+Unemployment Rate          & -4.59511        & *       & -4.65701        & *        & -4.78258        & *        & -7.60278          & *         & -7.70628        & *       \\
+Interest Rate              & -7.35245        & *       & -7.56178        & *        & -7.53145        & *        & -9.97176          & *         & -9.9337         & *       \\
+Consumer Price Index       & -7.03739        & *       & -7.04257        & *        & -7.03008        & *        & -11.1771          & *         & -11.2587        & *       \\
+Gap Gross Domestic Product & -6.87391        & *       & -6.9118         & *        & -6.89305        & *        & -6.57819          & *         & -6.55389        & *       \\
+Producer Prices Index      & -6.07706        & *       & -6.11674        & *        & -6.21462        & *        & -6.08898          & *         & -6.19294        & *       \\ \hline
+\end{tabular}
+\end{adjustbox}
+\caption*{Note: * symbolizes that the series do not reject the null hypotheses of the tests, in the absence of a unit root. The test statistics, for the Augmented-Dickey-Fuller test for none, drift and trend are respectively for 10\%, 5\% and 1\%:-2.58, -1.95, -1.62; -3.46, -2.88, -2.57; -3.99, -3.43 and -3.13. For Phillips \& Perron test for constant and trend are respectively for 10\%, 5\% and 1\%: -3.48, -2.88, -2.58; -4.03, -3.44 and -3.15.}
+\end{table}
 
 
 
 
-
-\subsection{Unit Root Tests}
 
 \section{Modeling}
 
